# ai-stock-market-trader

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py  setup.py  test_basic_import.py
src/: __init__.py
src/ai_stock_trader/: __init__.py  __main__.py
src/ai_stock_trader/accounts/: __init__.py
src/ai_stock_trader/agents/: __init__.py
src/ai_stock_trader/config/: settings.py
src/ai_stock_trader/core/: __init__.py
src/ai_stock_trader/market/: __init__.py
src/ai_stock_trader/utils/: logging.py
src/ai_stock_trader/web/: __init__.py  app.py
tests/unit/: test_account.py
