[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-stock-trader"
version = "0.1.0"
description = "AI-powered stock market trading system using OpenAI Agents SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Stock Trader Team", email = "team@aistocktrader.com"}
]
maintainers = [
    {name = "AI Stock Trader Team", email = "team@aistocktrader.com"}
]
keywords = ["ai", "trading", "stock-market", "openai", "agents", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "agents>=0.1.0",
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "polygon-api-client>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "mcp>=0.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-stock-market-trader"
Documentation = "https://github.com/yourusername/ai-stock-market-trader#readme"
Repository = "https://github.com/yourusername/ai-stock-market-trader.git"
"Bug Tracker" = "https://github.com/yourusername/ai-stock-market-trader/issues"

[project.scripts]
ai-stock-trader = "ai_stock_trader.__main__:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_stock_trader"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/scripts",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "setup.py",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
asyncio_mode = "auto"
